--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "form-builder",
-  "version": "0.1.0",
+  "name": "link-saver",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
