Bug fix in url manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -54,7 +54,7 @@
     "enctype": "multipart/form-data",
     "params": {
       "title": "text",
-      "text": "text",
+      "text": "text123",
       "url": "url"
     }
   }
