--- a/public/manifest.json
+++ b/public/manifest.json
@@ -53,8 +53,8 @@
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
-      "title": "text",
-      "text": "text123",
+      "title": "title",
+      "text": "text",
       "url": "url"
     }
   }
