--- a/public/manifest.json
+++ b/public/manifest.json
@@ -53,9 +53,9 @@
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
+      "title": "name",
+      "text": "description",
+      "url": "link"
     }
   }
 }
