--- a/public/manifest.json
+++ b/public/manifest.json
@@ -50,8 +50,7 @@
   "background_color": "#ffffff",
   "share_target": {
     "action": "/links/add",
-    "method": "POST",
-    "enctype": "multipart/form-data",
+    "method": "GET",
     "params": {
       "title": "name",
       "text": "description",
